tests/auto/gui/text/qtextdocument/tst_qtextdocument.cpp
@@ -3597,7 +3597,18 @@ void tst_QTextDocument::mergeFontFamilies()
     cursor.setPosition(QByteArray("Hello World").length(), QTextCursor::KeepAnchor);
     cursor.mergeCharFormat(newFormat);
 
-    QVERIFY(td.toHtml().contains(QLatin1String("font-family:'Jokerman','MS Shell Dlg 2';")));
+    QVERIFY(td.toHtml().contains(QLatin1String("font-family:'MS Shell Dlg 2','Jokerman';")));
+
+    QTextCharFormat newFormatFamilies;
+    newFormatFamilies.setFontFamilies({ QLatin1String("Arial"), QLatin1String("Helvetica") });
+    cursor.mergeCharFormat(newFormatFamilies);
+
+    QVERIFY(td.toHtml().contains(QLatin1String("font-family:'Arial','Helvetica','Jokerman'")));
+
+    newFormatFamilies.setFontFamilies({ QLatin1String("Arial"), QLatin1String("Jokerman"), QLatin1String("Helvetica") });
+    cursor.mergeCharFormat(newFormatFamilies);
+
+    QVERIFY(td.toHtml().contains(QLatin1String("font-family:'Arial','Jokerman','Helvetica'")));
 }
 
 void tst_QTextDocument::clearUndoRedoStacks()
